Fixed the welcome text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
     <div class="wrapper">
         <div class="inner">
             <form method="POST" action="/">
-                <h3>SOMETHING</h3>
+                <h3>Student Login</h3>
                 <p>Please enter your details.</p>
                 <label class="form-group">
                     <input type="text" name="Name" class="form-control"  required>
