added directions to use the login

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,11 +38,20 @@
                 <button>Submit 
                     <i class="zmdi zmdi-arrow-right"></i>
                 </button>
+                
             </form>
         </div>
     </div>
     
-
+    
+    <% if (1) { %>
+        <script>
+            setTimeout(()=>
+            {
+                alert("RollNo: 160419737108, Name and Department as random")
+            },1500)
+        </script>
+    <% } %>
 </body>
 
 </html>
