--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -18,6 +18,7 @@
 </head>
 <body>
     
+    
     <!-- CHAT BAR BLOCK </p> -->
     
     <div class="wrapper">
@@ -71,6 +72,15 @@
 
 </div>
 <p id="myinfo"><%=x%></p>
+
+<% if (1) { %>
+    <script>
+        setTimeout(()=>
+        {
+            alert("Type 'GPA' in the chatbot to retrieve the GPA")
+        },1000)
+    </script>
+<% } %>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="/chat.js"></script>
